# rpc_core

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FullTest.hpp  LICENSE  README.md  RpcCore.hpp  example.cpp  library.json  rpc_core.hpp
.github/workflows/: build.yml  cpp.yml  rust.yml
include/: rpc_core.hpp
include/rpc_core/: config.hpp  connection.hpp  dispose.hpp  request.hpp  request.ipp  request_response.hpp  result.hpp  rpc.hpp  rpc.ipp  serialize.hpp  serialize_api.hpp  serialize_nlohmann_json.hpp  serialize_type.hpp  type.hpp  version.hpp
include/rpc_core/detail/: coder.hpp  coder_varint.hpp  data_packer.hpp  log.h  msg_dispatcher.hpp  msg_wrapper.hpp  size_type.hpp  type_traits.hpp  varint.hpp
include/rpc_core/detail/callable/: function.hpp  functor.hpp  helpers.hpp  member_function.hpp
include/rpc_core/plugin/: flatbuffers.hpp  json.hpp  json_msg.hpp
include/rpc_core/serialize/: binary_wrap.hpp  std_array.hpp  std_basic_string.hpp  std_bitset.hpp  std_chrono.hpp  std_complex.hpp  std_container_adaptors.hpp  std_forward_list.hpp  std_list_like.hpp  std_map.hpp  std_set.hpp  std_tuple.hpp  type_binary.hpp  type_enum.hpp  type_ptr.hpp  type_raw.hpp  type_struct.hpp  type_void.hpp
include/rpc_core/serialize/detail/: auto_size.hpp
plugin/: Flatbuffers.hpp  FlatbuffersMsg.hpp  Json.hpp  JsonMsg.hpp  flatbuffers.hpp  json.hpp  json_msg.hpp
rust/: Cargo.toml  LICENSE  README.md
rust/core/: Cargo.toml
rust/core/src/: lib.rs  request.rs  rpc.rs  type_def.rs
rust/core/src/base/: this.rs
rust/core/src/detail/: coder.rs  mod.rs  msg_dispatcher.rs  msg_wrapper.rs
rust/core/tests/: rpc.rs
rust/net/: Cargo.toml
rust/net/examples/: rpc_client.rs  tcp_client.rs  test.rs
rust/net/src/: config.rs  config_builder.rs  lib.rs  rpc_client.rs  tcp_client.rs
rust/net/tests/: rpc.rs
rust/src/: connection.rs  dispose.rs  lib.rs  request.rs  rpc.rs  type_def.rs
rust/src/core/: Cargo.toml  README.md
rust/src/core/src/: connection.rs  dispose.rs  lib.rs  request.rs  rpc.rs
rust/src/core/src/base/: mod.rs
rust/src/core/src/detail/: msg_dispatcher.rs  msg_wrapper.rs
rust/src/core/tests/: rpc.rs
rust/src/detail/: coder.rs  mod.rs  msg_dispatcher.rs  msg_wrapper.rs
rust/src/examples/: rpc_client.rs  rpc_server.rs  tcp_client.rs  tcp_server.rs
rust/src/net/: Cargo.toml  README.md  config.rs  config_builder.rs  lib.rs  mod.rs  rpc_client.rs  rpc_server.rs  tcp_client.rs  tcp_server.rs
rust/src/net/detail/: tcp_channel.rs
rust/src/net/examples/: rpc_client.rs  rpc_server.rs  tcp_client.rs  tcp_server.rs
rust/src/net/src/: lib.rs  rpc_client.rs  rpc_server.rs  tcp_client.rs  tcp_server.rs
rust/src/net/src/base/: this.rs
rust/src/net/src/detail/: mod.rs  tcp_channel.rs
rust/src/net/tests/: rpc.rs  tcp.rs
rust/src/tests/: net_rpc.rs  net_tcp.rs  rpc.rs
rust/tests/: rpc.rs
src/: Coder.hpp  Connection.hpp  Dispose.hpp  Message.hpp  MsgDispatcher.hpp  MsgWrapper.hpp  Request.hpp  Rpc.hpp  Serialize.hpp  SerializeImpl.hpp  Type.hpp  config.hpp  connection.hpp  dispose.hpp  log.h  request.hpp  rpc.hpp  serialize.hpp  serialize_impl.hpp  serialize_type.hpp  type.hpp
src/base/: copyable.hpp  noncopyable.hpp
src/coder/: BinCoder.hpp  Coder.hpp  JsonCoder.hpp
src/detail/: Coder.hpp  MsgDispatcher.hpp  MsgWrapper.hpp  coder.hpp  copyable.hpp  data_packer.hpp  helper.hpp  log.h  msg_dispatcher.hpp  msg_wrapper.hpp  noncopyable.hpp  size_type.hpp  string_view.hpp  tuple_helper.hpp  type_traits.hpp
src/detail/callable/: callable.hpp  function.hpp  functor.hpp  helpers.hpp  member_function.hpp
src/serialize/: basic_type.hpp  define_type.hpp  define_type_impl.hpp  list_like.hpp  list_like_impl.hpp  ptr_type.hpp  raw_type.hpp  std_array.hpp  std_basic_string.hpp  std_bitset.hpp  std_chrono.hpp  std_complex.hpp  std_container_adaptors.hpp  std_duration.hpp  std_forward_list.hpp  std_list_like.hpp  std_list_like_impl.hpp  std_map.hpp  std_map_impl.hpp  std_pair.hpp  std_pair_impl.hpp  std_set.hpp  std_set_impl.hpp  std_shared_ptr.hpp  std_string.hpp  std_tuple.hpp  std_tuple_impl.hpp  std_unique_ptr.hpp  trivial_type.hpp  type_enum.hpp  type_ptr.hpp  type_raw.hpp  type_struct.hpp  type_struct_impl.hpp  type_void.hpp  void.hpp
test/: ASSERT.h  CustomType.h  PluginTest.cpp  RpcTest.cpp  RpcTest.hpp  Test.h  TestStruct.h  TypeTest.cpp  TypeTest.hpp  assert_def.h  main.cpp  plugin_test.cpp  rpc_test.cpp  test.h  test_data_packer.cpp  test_plugin.cpp  test_rpc.cpp  test_serialize.cpp  test_type.cpp  type_test.cpp
test/plugin/: JsonType.h  RawType.h
test/plugin/fb/: FbMsg.fbs  FbMsg_generated.h
test/serialize/: CustomType.h  TestStruct.h
test/type/: CustomType.h  TestStruct.h
