[package]
name = "rpc-core"
version = "0.3.2"
description = "a tiny rpc library for rust"
categories = ["rpc", "rpc-core"]
homepage = "https://github.com/shuai132/rpc_core/tree/master/rust"
repository = "https://github.com/shuai132/rpc_core"
authors = ["liushuai <770722922@qq.com>"]
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.56"
autotests = true

[dependencies]
bitflags = "2.4"
log = "0.4"
serde = "1.0"
serde_json = "1.0"

tokio = { version = "1", features = ["rt", "net", "io-util", "macros"], optional = true }
tokio-stream = { version = "0.1", optional = true }

[features]
default = []
full = ["net"]
net = ["tokio", "tokio-stream"]

[package.metadata.docs.rs]
features = ["full"]

[dev-dependencies]
env_logger = "0.10.0"

[[test]]
name = "rpc"
path = "src/tests/rpc.rs"

[[test]]
name = "net_rpc"
path = "src/tests/net_rpc.rs"
required-features = ["net"]

[[test]]
name = "net_tcp"
path = "src/tests/net_tcp.rs"
required-features = ["net"]

[[example]]
name = "tcp_client"
path = "src/examples/tcp_client.rs"
required-features = ["net"]

[[example]]
name = "tcp_server"
path = "src/examples/tcp_server.rs"
required-features = ["net"]

[[example]]
name = "rpc_client"
path = "src/examples/rpc_client.rs"
required-features = ["net"]

[[example]]
name = "rpc_server"
path = "src/examples/rpc_server.rs"
required-features = ["net"]
