[package]
name = "rpc-core"
description = "a tiny rpc library for rust"
exclude = ["/target", "/tests", "/examples"]
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
bitflags = "2.4"
log = "0.4"
serde = "1.0"
serde_json = "1.0"

[[test]]
name = "core_rpc"
path = "tests/rpc.rs"

[dev-dependencies]
env_logger = "0.10.0"
