[package]
name = "rpc-core-net"
version = "0.1.0"
description = "a tiny rpc library for rust"
exclude = ["/target", "/tests", "/examples"]
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
rpc-core = { version = "0.1.0", path = "../core" }
bitflags = "2.4"
log = "0.4"
tokio = { version = "1", features = ["rt", "net", "io-util"] }
tokio-stream = "0.1"

[dev-dependencies]
env_logger = "0.10.0"
