[package]
name = "rpc-core-net"
description = "a tiny rpc library for rust"
exclude = ["/target", "/tests", "/examples"]
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
rpc-core = { version = "0.2.2", path = "../core" }
bitflags = "2.4"
log = "0.4"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros"] }
tokio-stream = "0.1"

[dev-dependencies]
env_logger = "0.10.0"

[[test]]
name = "net_rpc"
path = "tests/rpc.rs"

[[test]]
name = "net_tcp"
path = "tests/tcp.rs"
